# squinewave

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  alternative_sites.md  regenerate
csound/: README.md  squinewave.c
java/: README.md  SquinewaveOscillator.java
plugins/Squine/: Squine.cpp  Squine.hpp  Squine.sc  Squine.schelp
rust/: Cargo.toml  README.md
rust/examples/: main.rs  show_csv.py
rust/src/: lib.rs
supercollider/: .appveyor.yml  CMakeLists.txt  README.md
supercollider/plugins/Squine/: Squine.cpp  Squine.sc  Squine.schelp
